--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Catalogo de filmes</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Sobre Nos</a>
+        </nav>
+    </header>
     <h3>Trailer Moana 2 Dublado</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lqMJQa3JhZU?si=pm4ByRCqH9F8E9yE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>Trailer Coringa 2 Dublado</h3>
