--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <a href="#">Sobre Nos</a>
         </nav>
     </header>
-    <h3>Trailer Moana 2 Dublado</h3>
+    <h3 class="primeiro-titulo">Trailer Moana 2 Dublado</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lqMJQa3JhZU?si=pm4ByRCqH9F8E9yE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h3>Trailer Coringa 2 Dublado</h3>
+    <h3 class="segundo-titulo">Trailer Coringa 2 Dublado</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/AbPt_Ka0vZE?si=WA2s3n-BaooH4UqT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
